Simplify OpenAM documentation, and define exact steps